# lg

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md
.github/workflows/: build.yml
asset/: init.json  sysConfig.json
asset/data/: in.ldtk
asset/editor/: config.json
asset/stay/data/: in.ldtk
source/: editor.cpp  main.cpp
source/component/: cameraFollow.hpp  cameraRegion.hpp  dash.hpp  hook.hpp  pathFollow.hpp  platformTrigger.hpp  player.hpp  playerDebug.hpp  suicide.hpp
source/enemy/: frog.hpp  frogIdle.hpp  frogSystem.cpp  frogWalking.hpp
source/loader/: loader.cpp  loader.hpp
source/system/: cameraFollowSystem.cpp  dashSystem.cpp  dashSystem.hpp  debugSystem.cpp  debugSystem.hpp  hookSystem.cpp  hookSystem.hpp  levelSystem.cpp  pathFollowSystem.cpp  playerSystem.cpp  playerSystem.hpp  suicideSystem.cpp
